# matrix-inverse

./: README.md
example/src/: jiang_enc_cipher.h  matrix.cpp  matrix.h
example/test/: CMakeLists.txt  test_example.cpp
example/test/dia_A/: dia_A_(128,128).txt  dia_A_(16,16).txt  dia_A_(256,256).txt  dia_A_(32,32).txt  dia_A_(4,4).txt  dia_A_(512,512).txt  dia_A_(64,64).txt  dia_A_(8,8).txt
example/test/dia_alpha/: dia_alpha_(128,128).txt  dia_alpha_(16,16).txt  dia_alpha_(256,256).txt  dia_alpha_(32,32).txt  dia_alpha_(4,4).txt  dia_alpha_(512,512).txt  dia_alpha_(64,64).txt  dia_alpha_(8,8).txt
example/test/dia_input/: dia_input_(128,128).txt  dia_input_(16,16).txt  dia_input_(256,256).txt  dia_input_(32,32).txt  dia_input_(4,4).txt  dia_input_(512,512).txt  dia_input_(64,64).txt  dia_input_(8,8).txt
example/test/dia_movie/: dia_A_all_(4,4).txt  dia_alpha_all_(4,4).txt  dia_input_all_(4,4).txt
example/test/dia_triangle/: triangle_A_(4,4).txt  triangle_M_(4,4).txt  triangle_tae_Y0_(4,4).txt
example/test/real_A/: real_A_(128,128).txt  real_A_(16,16).txt  real_A_(256,256).txt  real_A_(32,32).txt  real_A_(4,4).txt  real_A_(512,512).txt  real_A_(64,64).txt  real_A_(8,8).txt
example/test/real_alpha/: real_alpha_(128,128).txt  real_alpha_(16,16).txt  real_alpha_(256,256).txt  real_alpha_(32,32).txt  real_alpha_(4,4).txt  real_alpha_(512,512).txt  real_alpha_(64,64).txt  real_alpha_(8,8).txt
example/test/real_input/: real_input_(128,128).txt  real_input_(16,16).txt  real_input_(256,256).txt  real_input_(32,32).txt  real_input_(4,4).txt  real_input_(512,512).txt  real_input_(64,64).txt  real_input_(8,8).txt
example/test/real_movie/: real_A_all_(4,4).txt  real_alpha_all_(4,4).txt  real_input_all_(4,4).txt
example/test/real_tae_Y0/: Y_0_values(128,128).txt  Y_0_values(16,16).txt  Y_0_values(32,32).txt  Y_0_values(4,4).txt  Y_0_values(64,64).txt  Y_0_values(8,8).txt
